--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p id="sum-el">Sum:</p>
     <button onclick="startGame()">Start Game</button>
     <button onclick="newCard()">Draw New Card</button>
+    <p id="player-el"></p>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
